Fetch followers/following/friends counts when loading remote users